packages/kyvernoPolicies/chart/tests/vpol/restrict-user-id-cel/kyverno-test/resource.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-pod-runasuser
  namespace: default
spec:
  securityContext:
    runAsUser: 500
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-container-runasuser
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 100
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-initcontainer-runasuser
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  initContainers:
  - name: init1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-ephemeralcontainer-runasuser
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
  ephemeralContainers:
  - name: debug1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-container-runasuser
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-user-id
  template:
    metadata:
      labels:
        app: bad-user-id
    spec:
      containers:
      - name: c1
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
        securityContext:
          runAsUser: 500
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-deny-pod-runasuser
  namespace: default
spec:
  securityContext:
    runAsUser: 1500
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-deny-container-runasuser
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 1599
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-runasuser
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-pod-runasuser
  namespace: default
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-container-runasuser
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 2000
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-all-container-types
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 1000
  - name: c2
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 2000
  initContainers:
  - name: init1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 4000
  ephemeralContainers:
  - name: debug1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 5000
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-just-below-deny
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 1499
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-just-above-deny
  namespace: default
spec:
  containers:
  - name: c1
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      runAsUser: 1600
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-container-runasuser
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-user-id
  template:
    metadata:
      labels:
        app: good-user-id
    spec:
      containers:
      - name: c1
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
        securityContext:
          runAsUser: 1000
